added base home, calendar, recipe, grocery, and pantry screen with base nav bar

--- a/frontend/ByteMe/app.json
+++ b/frontend/ByteMe/app.json
@@ -1,7 +1,7 @@
 {
   "expo": {
-    "name": "ByteMe",
-    "slug": "ByteMe",
+    "name": "byteme",
+    "slug": "byteme",
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/images/icon.png",
