--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "axios": "^1.8.1",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
+    "lucide-react": "^0.477.0",
     "mongoose": "^8.11.0"
   },
   "devDependencies": {
