--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "bcryptjs": "^3.0.2",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
+    "lucide-react": "^0.477.0",
     "mongoose": "^8.11.0"
   },
   "devDependencies": {
