--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-MONGO_URI= mongodb+srv://hoangtrung301997:Chinhuynh140397@cluster0.zogum.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
+MONGO_URI=mongodb+srv://hoangtrung301997:Chinhuynh140397@cluster0.zogum.mongodb.net/Recipes?retryWrites=true&w=majority&appName=Cluster0
 PORT=5000
 REACT_APP_EDAMAM_APP_ID=54d92af4
 REACT_APP_EDAMAM_API_KEY=8dc992649f27e7cabc68db7dcc8d605b
