Change for the recipe.

--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-
+MONGO_URI=mongodb+srv://hoangtrung301997:Chinhuynh1403@cluster0.zogum.mongodb.net/Recipes?retryWrites=true&w=majority&appName=Cluster0
