--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@chakra-ui/react": "^3.9.0",
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
+    "@react-native-async-storage/async-storage": "^2.1.2",
     "axios": "^1.8.2",
     "bcryptjs": "^3.0.2",
     "cors": "^2.8.5",
