--- a/.gitignore
+++ b/.gitignore
@@ -1,17 +1,39 @@
-# General
-.DS_Store
-Thumbs.db
+# Learn more https://docs.github.com/en/get-started/getting-started-with-git/ignoring-files
+
+# dependencies
 node_modules/
 .env
 
-# Expo specific
+# Expo
 .expo/
-*.apk
-*.aab
-*.ipa
+dist/
+web-build/
+expo-env.d.ts
 
-# Backend specific
-/dist/
-/logs/
+# Native
+*.orig.*
+*.jks
+*.p8
+*.p12
+*.key
+*.mobileprovision
 
-.idea/
+# Metro
+.metro-health-check*
+
+# debug
+npm-debug.*
+yarn-debug.*
+yarn-error.*
+
+# macOS
+.DS_Store
+*.pem
+
+# local env files
+.env*.local
+
+# typescript
+*.tsbuildinfo
+
+app-example
