--- a/frontend/ByteMe/package.json
+++ b/frontend/ByteMe/package.json
@@ -39,6 +39,7 @@
     "expo-web-browser": "~14.0.2",
     "formik": "^2.4.6",
     "jest-expo": "~52.0.6",
+    "jwt-decode": "^4.0.0",
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "react-native": "0.76.7",
