--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "express": "^4.21.2",
     "express-async-handler": "^1.2.0",
     "jsonwebtoken": "^9.0.2",
+    "jwt-decode": "^4.0.0",
     "mongoose": "^8.11.0"
   },
   "devDependencies": {
